[package]
name = "hexpong"
version = "0.1.0"
authors = ["acerne <a.cerne89@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
rand = "0.7.3"
yaml-rust = "0.4.4"
geometry = { path = "lib/geometry" }